2010-04-30  Yoshiki Hayashi  <yhayashi@google.com>

Reviewed by Shinichiro Hamaji.

        https://bugs.webkit.org/show_bug.cgi?id=38249

        Fixes an issue where border height and padding height are ignored when computing vertically shrinking flexbox's height.

        * fast/flexbox/child-flexing-expected.txt: Added.
        * fast/flexbox/child-flexing.html: Added.
2010-04-30  Yoshiki Hayashi  <yhayashi@google.com>

        Reviewed by Shinichiro Hamaji.

        https://bugs.webkit.org/show_bug.cgi?id=38249

        Fixes an issue where border height and padding height are ignored when computing vertically shrinking flexbox's height.

        Test: fast/flexbox/child-flexing.html

        * rendering/RenderFlexibleBox.cpp:
        (WebCore::RenderFlexibleBox::allowedChildFlex):

Canonical link: https://commits.webkit.org/49885@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@58630 268f45cc-cd09-0410-ab3c-d52691b4dbfc